# murphy-ffplayer-study

./: README.md  gradlew  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/study/ndk22_compile_study/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  LiveAudioChannel.cpp  LiveAudioChannel.h  LiveVideoChannel.cpp  LiveVideoChannel.h  LogUtil.h  MurphyNativePlayer.cpp  MurphyNativePlayer.h  SafeQueue.h  ThreadUtil.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  native-rtmp.cpp
app/src/main/cpp/ffmpeg/libavcodec/: avcodec.h
app/src/main/cpp/ffmpeg/libavformat/: avformat.h
app/src/main/cpp/ffmpeg/libavutil/: buffer.h  executor.h  log.h  threadmessage.h
app/src/main/cpp/libcount/: CMakeLists.txt  count.cpp  count.h
app/src/main/cpp/libget/: CMakeLists.txt  get.c  get.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/study/ndk22_compile_study/: MainActivity.kt  MurphyPlayer.kt
app/src/main/java/com/study/ndk22_compile_study/player/: PlayerErrorListener.kt  PlayerProgressListener.kt  PlayerStateListener.kt
app/src/main/java/com/study/ndk22_compile_study/push/: AudioChannel.kt  Pusher.kt  (+2 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/study/ndk22_compile_study/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
